<resources>
    <string name="app_name">Consiglia Viaggi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ConsigliaViaggi</string>
    <string name="nav_header_subtitle">Accesso non effettuato</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_filter">Filtri</string>
    <string name="action_save">Salva</string>
    <string name="menu_home">Home</string>
    <string name="menu_map">Mappa</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_ac_detail">Dettagli Struttura</string>
    <string name="menu_ac_list">Lista Strutture</string>

    <string name="menu_ac_view">Accommodation View</string>
    <string name="description_label">Descrizione</string>
    <string name="map_description_title">Esplora luoghi nelle vicinanze</string>
    <string name="map_description_message">Usa la tua posizione per esplorare le attività intorno a te</string>
    <string name="explore_map_button">Esplora mappa</string>
    <string name="use_location_button">Localizzami</string>
    <string name="city_select">Seleziona provincia</string>
    <string name="clear_location_button_text">Reset Provincia</string>
    <string name="category_hotel">hotel</string>
    <string name="open_detail_button">Visualizza Dettagli</string>
    <string name="menu_account">Account</string>
    <string name="menu_login">Login</string>
    <string name="best_rating">Best Rating</string>
    <string name="worst_rating">Worst Rating</string>
    <string name="date">Data</string>
    <string name="menu_signup">Registrazione</string>
    <string name="read_all">Leggi tutte</string>
    <string name="menu_review_list">Lista Recensioni</string>
    <string name="category_restaurant">Ristoranti</string>
    <string name="category_attraction">Attrazioni</string>
    <string name="a_z_order">A-Z</string>
    <string name="write_review">Scrivi una recensione</string>
    <string name="menu_create_review">Scrivi Recensione</string>
    <string name="publish">Pubblica</string>
    <string name="no_access">Accesso non effettuato</string>Benvenuto
    <string name="welcome">Benvenuto</string>
    <string name="google_maps_key">AIzaSyBCZ4ICGLugfgohjc90PeDdZ2Zs9RUte2k</string>
    <string name="register_account">Non hai un account? Creane uno</string>
    <string name="login">Login</string>
    <string name="account">Account</string>
    <string name="username">Username</string>
    <string name="name">Nome</string>
    <string name="review_info_alert">Recensione</string>
    <string name="ok">ok</string>
    <string name="redo_search_button">Cerca in questa zona</string>
    <string name="facebook_app_id">378139930005882</string> <string name="fb_login_protocol_scheme">fb378139930005882</string>
    <string name="text_placeholder">TEXT</string>
    <string name="data_updating">Caricamento</string>
    <string name="z_a_order">Z-A</string>
    <string name="new_review">Nuova recensione</string>


    <string-array name="cities_array">
        <item>Agrigento</item>
        <item>Alessandria</item>
        <item>Ancona</item>
        <item>Aosta</item>
        <item>Arezzo</item>
        <item>Ascoli Piceno</item>
        <item>Asti</item>
        <item>Avellino</item>
        <item>Bari</item>
        <item>Barletta-Andria-Trani</item>
        <item>Belluno</item>
        <item>Benevento</item>
        <item>Bergamo</item>
        <item>Biella</item>
        <item>Bologna</item>
        <item>Bolzano</item>
        <item>Brescia</item>
        <item>Brindisi</item>
        <item>Cagliari</item>
        <item>Caltanissetta</item>
        <item>Campobasso</item>
        <item>Carbonia-iglesias</item>
        <item>Caserta</item>
        <item>Catania</item>
        <item>Catanzaro</item>
        <item>Chieti</item>
        <item>Como</item>
        <item>Cosenza</item>
        <item>Cremona</item>
        <item>Crotone</item>
        <item>Cuneo</item>
        <item>Enna</item>
        <item>Fermo</item>
        <item>Ferrara</item>
        <item>Firenze</item>
        <item>Foggia</item>
        <item>Forlì-Cesena</item>
        <item>Frosinone</item>
        <item>Genova</item>
        <item>Gorizia</item>
        <item>Grosseto</item>
        <item>Imperia</item>
        <item>Isernia</item>
        <item>La spezia</item>
        <item>L\'aquila</item>
        <item>Latina</item>
        <item>Lecce</item>
        <item>Lecco</item>
        <item>Livorno</item>
        <item>Lodi</item>
        <item>Lucca</item>
        <item>Macerata</item>
        <item>Mantova</item>
        <item>Massa-Carrara</item>
        <item>Matera</item>
        <item>Medio Campidano</item>
        <item>Messina</item>
        <item>Milano</item>
        <item>Modena</item>
        <item>Monza e della Brianza</item>
        <item>Napoli</item>
        <item>Novara</item>
        <item>Nuoro</item>
        <item>Ogliastra</item>
        <item>Olbia-Tempio</item>
        <item>Oristano</item>
        <item>Padova</item>
        <item>Palermo</item>
        <item>Parma</item>
        <item>Pavia</item>
        <item>Perugia</item>
        <item>Pesaro e Urbino</item>
        <item>Pescara</item>
        <item>Piacenza</item>
        <item>Pisa</item>
        <item>Pistoia</item>
        <item>Pordenone</item>
        <item>Potenza</item>
        <item>Prato</item>
        <item>Ragusa</item>
        <item>Ravenna</item>
        <item>Reggio di Calabria</item>
        <item>Reggio nell\'Emilia</item>
        <item>Rieti</item>
        <item>Rimini</item>
        <item>Roma</item>
        <item>Rovigo</item>
        <item>Salerno</item>
        <item>Sassari</item>
        <item>Savona</item>
        <item>Siena</item>
        <item>Siracusa</item>
        <item>Sondrio</item>
        <item>Taranto</item>
        <item>Teramo</item>
        <item>Terni</item>
        <item>Torino</item>
        <item>Trapani</item>
        <item>Trento</item>
        <item>Treviso</item>
        <item>Trieste</item>
        <item>Udine</item>
        <item>Varese</item>
        <item>Venezia</item>
        <item>Verbano-Cusio-Ossola</item>
        <item>Vercelli</item>
        <item>Verona</item>
        <item>Vibo valentia</item>
        <item>Vicenza</item>
        <item>Viterbo</item>
    </string-array>

</resources>
