<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.surfmaster.consigliaviaggi.ui.main.MainFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.surfmaster.consigliaviaggi.ui.location.SelectLocationFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.surfmaster.consigliaviaggi.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.surfmaster.consigliaviaggi.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <activity
        android:id="@+id/nav_view_accommodations_activity"
        android:name="com.surfmaster.consigliaviaggi.ViewAccommodationsActivity"
        android:label="@string/menu_ac_list"
        tools:layout="@layout/activity_view_accommodations">

    </activity>

    <fragment
        android:id="@+id/nav_accommodation_list"
        android:name="com.surfmaster.consigliaviaggi.ui.accommodation_list.AccommodationListFragment"
        android:label="@string/menu_ac_list"
        tools:layout="@layout/fragment_accommodation_list" >
        <action
            android:id="@+id/action_nav_accommodation_list_to_nav_accommodation_detail"
            app:destination="@id/nav_accommodation_detail"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/nav_accommodation_detail"
        android:name="com.surfmaster.consigliaviaggi.ui.accommodation.AccommodationFragment"
        android:label="@string/menu_ac_detail"
        tools:layout="@layout/fragment_accommodation_detail">
        <argument
            android:name="accommodation_id"
            app:argType="integer" />

    </fragment>


</navigation>