<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:adjustViewBounds="true"
                    android:id="@+id/imageViewBackground"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/placeholder"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteX="144dp"
                    tools:layout_editor_absoluteY="63dp" />
                <androidx.appcompat.widget.AppCompatButton
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:text="@string/city_select"
                    android:drawableEnd="@android:drawable/arrow_down_float"
                    android:drawablePadding="5dp"
                    android:id="@+id/text_home"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:backgroundTint="@color/colorAccent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </RelativeLayout>

            <LinearLayout
                app:layout_constraintTop_toBottomOf="@id/layout"
                android:id="@+id/buttons_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <ImageButton
                    android:src="@drawable/baseline_hotel_black_18dp"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight=".30" />
                <ImageButton
                    android:src="@drawable/baseline_restaurant_black_18dp"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight=".30" />

                <ImageButton
                    android:src="@drawable/baseline_account_balance_black_18dp"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight=".30" />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttons_layout"

                android:layout_margin="6dp"

                android:id="@+id/cv_desc"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:background="@color/common_google_signin_btn_text_dark_default"
                    >
                    <ImageView
                        android:id="@+id/map_image"
                        android:adjustViewBounds="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/map">
                    </ImageView>
                    <LinearLayout
                        android:layout_alignBottom="@id/map_image"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="0dp">
                        <TextView
                            android:id="@+id/map_message_title"
                            android:text="@string/map_description_title"
                            android:textStyle="bold"
                            android:textColor="@android:color/black"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:textSize="25sp"
                            android:padding="2dip">
                        </TextView>
                        <TextView
                            android:id="@+id/tv"
                            android:textColor="@android:color/black"
                            android:text="@string/map_description_message"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:linksClickable="true"
                            android:textSize="20sp"
                            android:padding="2dip"
                            android:layout_marginLeft="6dp"
                            android:layout_marginRight="6dp"
                            android:textColorLink="#0099CC">
                        </TextView>
                        <androidx.appcompat.widget.AppCompatButton
                            android:drawablePadding="5dp"
                            android:drawableStart="@drawable/baseline_near_me_black_18dp"
                            android:textAlignment="center"
                            android:text="@string/explore_map_button"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:id="@+id/btnRound"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:backgroundTint="@color/colorPrimary"/>
                    </LinearLayout>


                </RelativeLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>